added changes to the recommendation system